src/y.output
Gramática

    0 $accept: program $end

    1 program: TOK_PROGRAM TOK_IDENTIFIER TOK_SEMICOLON class_decl class_decl_list

    2 class_decl_list: %empty
    3                | class_decl class_decl_list

    4 class_decl: TOK_CLASS TOK_IDENTIFIER class_body

    5 class_body: TOK_LCURLY decls_opt method_decl_list TOK_RCURLY

    6 decls_opt: %empty
    7          | decls

    8 decls: TOK_DECLARATIONS field_decl_list_decls TOK_ENDDECLARATIONS

    9 method_decl_list: %empty
   10                 | method_decl method_decl_list

   11 field_decl_list_decls: %empty
   12                      | field_decl TOK_SEMICOLON field_decl_list_decls

   13 field_decl: type var_decl_id field_decl_aux1

   14 field_decl_aux1: field_decl_aux2
   15                | TOK_EQUALS var_init field_decl_aux2

   16 field_decl_aux2: %empty
   17                | TOK_COMMA var_decl_id field_decl_aux1

   18 type: type_aux brackets_opt

   19 type_aux: TOK_IDENTIFIER
   20         | TOK_INT
   21         | TOK_STRING

   22 brackets_opt: %empty
   23             | TOK_LRSQUARE brackets_opt

   24 method_decl: TOK_METHOD method_return_type TOK_IDENTIFIER TOK_LPAREN formal_params_list_opt TOK_RPAREN block

   25 method_return_type: TOK_VOID
   26                   | type

   27 formal_params_list: TOK_VAL type TOK_IDENTIFIER id_list_comma formal_params_list_aux
   28                   | type TOK_IDENTIFIER id_list_comma formal_params_list_aux

   29 formal_params_list_aux: %empty
   30                       | TOK_SEMICOLON formal_params_list

   31 id_list_comma: %empty
   32              | TOK_COMMA TOK_IDENTIFIER id_list_comma

   33 formal_params_list_opt: %empty
   34                       | formal_params_list

   35 var_decl_id: TOK_IDENTIFIER brackets_opt

   36 var_init: expr
   37         | array_init
   38         | array_creation_expr

   39 array_init: TOK_LCURLY var_init var_init_list_comma TOK_RCURLY

   40 var_init_list_comma: %empty
   41                    | TOK_COMMA var_init var_init_list_comma

   42 array_creation_expr: TOK_ARROBA type array_dim_decl array_dim_decl_list

   43 array_dim_decl: TOK_LSQUARE expr TOK_RSQUARE

   44 array_dim_decl_list: %empty
   45                    | array_dim_decl array_dim_decl_list

   46 block: decls_opt stmt_list

   47 stmt_list: TOK_LCURLY stmt stmt_list_semicolon TOK_RCURLY

   48 stmt_list_semicolon: %empty
   49                    | TOK_SEMICOLON stmt stmt_list_semicolon

   50 stmt: var var_start_stmt
   51     | return_stmt
   52     | if_stmt
   53     | while_stmt
   54     | for_stmt
   55     | switch_stmt
   56     | print_stmt
   57     | read_stmt

   58 var_start_stmt: assign_stmt
   59               | method_call_stmt

   60 assign_stmt: TOK_ASSIGN expr

   61 method_call_stmt: TOK_LPAREN actual_params_list TOK_RPAREN

   62 actual_params_list: %empty
   63                   | expr expr_list_comma

   64 expr_list_comma: %empty
   65                | TOK_COMMA expr expr_list_comma

   66 return_stmt: TOK_RETURN expr_opt

   67 expr_opt: %empty
   68         | expr

   69 if_stmt: TOK_IF expr stmt_list else_part

   70 else_part: %empty
   71          | TOK_ELSE if_stmt_aux

   72 if_stmt_aux: if_stmt
   73            | stmt_list

   74 for_stmt: TOK_FOR for_init_expr TOK_TO expr step_opt stmt_list

   75 for_init_expr: TOK_IDENTIFIER assign_stmt

   76 step_opt: %empty
   77         | TOK_STEP expr

   78 while_stmt: TOK_WHILE expr stmt_list

   79 switch_stmt: TOK_SWITCH expr TOK_LCURLY case case_list TOK_RCURLY

   80 case: TOK_CASE expr stmt_list

   81 case_list: %empty
   82          | case case_list
   83          | TOK_DEFAULT stmt_list

   84 print_stmt: TOK_PRINT expr

   85 read_stmt: TOK_READ TOK_IDENTIFIER

   86 expr: al_expr TOK_EQEQ al_expr
   87     | al_expr TOK_LESS al_expr
   88     | al_expr TOK_LESSEQ al_expr
   89     | al_expr TOK_GREATEREQ al_expr
   90     | al_expr TOK_GREATER al_expr
   91     | al_expr TOK_DIFF al_expr
   92     | al_expr

   93 al_expr: TOK_PLUS al_expr
   94        | TOK_MINUS al_expr
   95        | TOK_NOT al_expr
   96        | al_expr TOK_PLUS al_expr
   97        | al_expr TOK_MINUS al_expr
   98        | al_expr TOK_2PIPE al_expr
   99        | al_expr TOK_ASTERISK al_expr
  100        | al_expr TOK_SLASH al_expr
  101        | al_expr TOK_AND al_expr
  102        | al_expr TOK_MOD al_expr
  103        | TOK_LPAREN expr TOK_RPAREN
  104        | TOK_INTEGERCONSTANT
  105        | TOK_STRINGCONSTANT
  106        | var method_call_opt

  107 method_call_opt: %empty
  108                | method_call_stmt

  109 var: TOK_IDENTIFIER var_aux

  110 var_aux: %empty
  111        | TOK_DOT TOK_IDENTIFIER var_aux
  112        | TOK_LSQUARE expr expr_list_comma TOK_RSQUARE var_aux


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
TOK_PROGRAM (258) 1
TOK_IDENTIFIER (259) 1 4 19 24 27 28 32 35 75 85 109 111
TOK_SEMICOLON (260) 1 12 30 49
TOK_CLASS (261) 4
TOK_LCURLY (262) 5 39 47 79
TOK_RCURLY (263) 5 39 47 79
TOK_DECLARATIONS (264) 8
TOK_ENDDECLARATIONS (265) 8
TOK_EQUALS (266) 15
TOK_COMMA (267) 17 32 41 65
TOK_INT (268) 20
TOK_STRING (269) 21
TOK_LRSQUARE (270) 23
TOK_METHOD (271) 24
TOK_LPAREN (272) 24 61 103
TOK_RPAREN (273) 24 61 103
TOK_VOID (274) 25
TOK_VAL (275) 27
TOK_ARROBA (276) 42
TOK_LSQUARE (277) 43 112
TOK_RSQUARE (278) 43 112
TOK_ASSIGN (279) 60
TOK_RETURN (280) 66
TOK_IF (281) 69
TOK_ELSE (282) 71
TOK_FOR (283) 74
TOK_TO (284) 74
TOK_STEP (285) 77
TOK_WHILE (286) 78
TOK_SWITCH (287) 79
TOK_CASE (288) 80
TOK_DEFAULT (289) 83
TOK_PRINT (290) 84
TOK_READ (291) 85
TOK_LESS (292) 87
TOK_LESSEQ (293) 88
TOK_EQEQ (294) 86
TOK_DIFF (295) 91
TOK_GREATEREQ (296) 89
TOK_GREATER (297) 90
TOK_PLUS (298) 93 96
TOK_UPLUS (299)
TOK_MINUS (300) 94 97
TOK_UMINUS (301)
TOK_NOT (302) 95
TOK_2PIPE (303) 98
TOK_ASTERISK (304) 99
TOK_SLASH (305) 100
TOK_AND (306) 101
TOK_MOD (307) 102
TOK_INTEGERCONSTANT (308) 104
TOK_STRINGCONSTANT (309) 105
TOK_DOT (310) 111


Não terminais com as regras onde eles aparecem

$accept (56)
    à esquerda: 0
program (57)
    à esquerda: 1, à direita: 0
class_decl_list (58)
    à esquerda: 2 3, à direita: 1 3
class_decl (59)
    à esquerda: 4, à direita: 1 3
class_body (60)
    à esquerda: 5, à direita: 4
decls_opt (61)
    à esquerda: 6 7, à direita: 5 46
decls (62)
    à esquerda: 8, à direita: 7
method_decl_list (63)
    à esquerda: 9 10, à direita: 5 10
field_decl_list_decls (64)
    à esquerda: 11 12, à direita: 8 12
field_decl (65)
    à esquerda: 13, à direita: 12
field_decl_aux1 (66)
    à esquerda: 14 15, à direita: 13 17
field_decl_aux2 (67)
    à esquerda: 16 17, à direita: 14 15
type (68)
    à esquerda: 18, à direita: 13 26 27 28 42
type_aux (69)
    à esquerda: 19 20 21, à direita: 18
brackets_opt (70)
    à esquerda: 22 23, à direita: 18 23 35
method_decl (71)
    à esquerda: 24, à direita: 10
method_return_type (72)
    à esquerda: 25 26, à direita: 24
formal_params_list (73)
    à esquerda: 27 28, à direita: 30 34
formal_params_list_aux (74)
    à esquerda: 29 30, à direita: 27 28
id_list_comma (75)
    à esquerda: 31 32, à direita: 27 28 32
formal_params_list_opt (76)
    à esquerda: 33 34, à direita: 24
var_decl_id (77)
    à esquerda: 35, à direita: 13 17
var_init (78)
    à esquerda: 36 37 38, à direita: 15 39 41
array_init (79)
    à esquerda: 39, à direita: 37
var_init_list_comma (80)
    à esquerda: 40 41, à direita: 39 41
array_creation_expr (81)
    à esquerda: 42, à direita: 38
array_dim_decl (82)
    à esquerda: 43, à direita: 42 45
array_dim_decl_list (83)
    à esquerda: 44 45, à direita: 42 45
block (84)
    à esquerda: 46, à direita: 24
stmt_list (85)
    à esquerda: 47, à direita: 46 69 73 74 78 80 83
stmt_list_semicolon (86)
    à esquerda: 48 49, à direita: 47 49
stmt (87)
    à esquerda: 50 51 52 53 54 55 56 57, à direita: 47 49
var_start_stmt (88)
    à esquerda: 58 59, à direita: 50
assign_stmt (89)
    à esquerda: 60, à direita: 58 75
method_call_stmt (90)
    à esquerda: 61, à direita: 59 108
actual_params_list (91)
    à esquerda: 62 63, à direita: 61
expr_list_comma (92)
    à esquerda: 64 65, à direita: 63 65 112
return_stmt (93)
    à esquerda: 66, à direita: 51
expr_opt (94)
    à esquerda: 67 68, à direita: 66
if_stmt (95)
    à esquerda: 69, à direita: 52 72
else_part (96)
    à esquerda: 70 71, à direita: 69
if_stmt_aux (97)
    à esquerda: 72 73, à direita: 71
for_stmt (98)
    à esquerda: 74, à direita: 54
for_init_expr (99)
    à esquerda: 75, à direita: 74
step_opt (100)
    à esquerda: 76 77, à direita: 74
while_stmt (101)
    à esquerda: 78, à direita: 53
switch_stmt (102)
    à esquerda: 79, à direita: 55
case (103)
    à esquerda: 80, à direita: 79 82
case_list (104)
    à esquerda: 81 82 83, à direita: 79 82
print_stmt (105)
    à esquerda: 84, à direita: 56
read_stmt (106)
    à esquerda: 85, à direita: 57
expr (107)
    à esquerda: 86 87 88 89 90 91 92, à direita: 36 43 60 63 65 68
    69 74 77 78 79 80 84 103 112
al_expr (108)
    à esquerda: 93 94 95 96 97 98 99 100 101 102 103 104 105 106,
    à direita: 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102
method_call_opt (109)
    à esquerda: 107 108, à direita: 106
var (110)
    à esquerda: 109, à direita: 50 106
var_aux (111)
    à esquerda: 110 111 112, à direita: 109 111 112


Estado 0

    0 $accept: . program $end

    TOK_PROGRAM  deslocar, e ir ao estado 1

    program  ir ao estado 2


Estado 1

    1 program: TOK_PROGRAM . TOK_IDENTIFIER TOK_SEMICOLON class_decl class_decl_list

    TOK_IDENTIFIER  deslocar, e ir ao estado 3


Estado 2

    0 $accept: program . $end

    $end  deslocar, e ir ao estado 4


Estado 3

    1 program: TOK_PROGRAM TOK_IDENTIFIER . TOK_SEMICOLON class_decl class_decl_list

    TOK_SEMICOLON  deslocar, e ir ao estado 5


Estado 4

    0 $accept: program $end .

    $padrão  aceitar


Estado 5

    1 program: TOK_PROGRAM TOK_IDENTIFIER TOK_SEMICOLON . class_decl class_decl_list

    TOK_CLASS  deslocar, e ir ao estado 6

    class_decl  ir ao estado 7


Estado 6

    4 class_decl: TOK_CLASS . TOK_IDENTIFIER class_body

    TOK_IDENTIFIER  deslocar, e ir ao estado 8


Estado 7

    1 program: TOK_PROGRAM TOK_IDENTIFIER TOK_SEMICOLON class_decl . class_decl_list

    TOK_CLASS  deslocar, e ir ao estado 6

    $padrão  reduzir usando a regra 2 (class_decl_list)

    class_decl_list  ir ao estado 9
    class_decl       ir ao estado 10


Estado 8

    4 class_decl: TOK_CLASS TOK_IDENTIFIER . class_body

    TOK_LCURLY  deslocar, e ir ao estado 11

    class_body  ir ao estado 12


Estado 9

    1 program: TOK_PROGRAM TOK_IDENTIFIER TOK_SEMICOLON class_decl class_decl_list .

    $padrão  reduzir usando a regra 1 (program)


Estado 10

    3 class_decl_list: class_decl . class_decl_list

    TOK_CLASS  deslocar, e ir ao estado 6

    $padrão  reduzir usando a regra 2 (class_decl_list)

    class_decl_list  ir ao estado 13
    class_decl       ir ao estado 10


Estado 11

    5 class_body: TOK_LCURLY . decls_opt method_decl_list TOK_RCURLY

    TOK_DECLARATIONS  deslocar, e ir ao estado 14

    $padrão  reduzir usando a regra 6 (decls_opt)

    decls_opt  ir ao estado 15
    decls      ir ao estado 16


Estado 12

    4 class_decl: TOK_CLASS TOK_IDENTIFIER class_body .

    $padrão  reduzir usando a regra 4 (class_decl)


Estado 13

    3 class_decl_list: class_decl class_decl_list .

    $padrão  reduzir usando a regra 3 (class_decl_list)


Estado 14

    8 decls: TOK_DECLARATIONS . field_decl_list_decls TOK_ENDDECLARATIONS

    TOK_IDENTIFIER  deslocar, e ir ao estado 17
    TOK_INT         deslocar, e ir ao estado 18
    TOK_STRING      deslocar, e ir ao estado 19

    $padrão  reduzir usando a regra 11 (field_decl_list_decls)

    field_decl_list_decls  ir ao estado 20
    field_decl             ir ao estado 21
    type                   ir ao estado 22
    type_aux               ir ao estado 23


Estado 15

    5 class_body: TOK_LCURLY decls_opt . method_decl_list TOK_RCURLY

    TOK_METHOD  deslocar, e ir ao estado 24

    $padrão  reduzir usando a regra 9 (method_decl_list)

    method_decl_list  ir ao estado 25
    method_decl       ir ao estado 26


Estado 16

    7 decls_opt: decls .

    $padrão  reduzir usando a regra 7 (decls_opt)


Estado 17

   19 type_aux: TOK_IDENTIFIER .

    $padrão  reduzir usando a regra 19 (type_aux)


Estado 18

   20 type_aux: TOK_INT .

    $padrão  reduzir usando a regra 20 (type_aux)


Estado 19

   21 type_aux: TOK_STRING .

    $padrão  reduzir usando a regra 21 (type_aux)


Estado 20

    8 decls: TOK_DECLARATIONS field_decl_list_decls . TOK_ENDDECLARATIONS

    TOK_ENDDECLARATIONS  deslocar, e ir ao estado 27


Estado 21

   12 field_decl_list_decls: field_decl . TOK_SEMICOLON field_decl_list_decls

    TOK_SEMICOLON  deslocar, e ir ao estado 28


Estado 22

   13 field_decl: type . var_decl_id field_decl_aux1

    TOK_IDENTIFIER  deslocar, e ir ao estado 29

    var_decl_id  ir ao estado 30


Estado 23

   18 type: type_aux . brackets_opt

    TOK_LRSQUARE  deslocar, e ir ao estado 31

    $padrão  reduzir usando a regra 22 (brackets_opt)

    brackets_opt  ir ao estado 32


Estado 24

   24 method_decl: TOK_METHOD . method_return_type TOK_IDENTIFIER TOK_LPAREN formal_params_list_opt TOK_RPAREN block

    TOK_IDENTIFIER  deslocar, e ir ao estado 17
    TOK_INT         deslocar, e ir ao estado 18
    TOK_STRING      deslocar, e ir ao estado 19
    TOK_VOID        deslocar, e ir ao estado 33

    type                ir ao estado 34
    type_aux            ir ao estado 23
    method_return_type  ir ao estado 35


Estado 25

    5 class_body: TOK_LCURLY decls_opt method_decl_list . TOK_RCURLY

    TOK_RCURLY  deslocar, e ir ao estado 36


Estado 26

   10 method_decl_list: method_decl . method_decl_list

    TOK_METHOD  deslocar, e ir ao estado 24

    $padrão  reduzir usando a regra 9 (method_decl_list)

    method_decl_list  ir ao estado 37
    method_decl       ir ao estado 26


Estado 27

    8 decls: TOK_DECLARATIONS field_decl_list_decls TOK_ENDDECLARATIONS .

    $padrão  reduzir usando a regra 8 (decls)


Estado 28

   12 field_decl_list_decls: field_decl TOK_SEMICOLON . field_decl_list_decls

    TOK_IDENTIFIER  deslocar, e ir ao estado 17
    TOK_INT         deslocar, e ir ao estado 18
    TOK_STRING      deslocar, e ir ao estado 19

    $padrão  reduzir usando a regra 11 (field_decl_list_decls)

    field_decl_list_decls  ir ao estado 38
    field_decl             ir ao estado 21
    type                   ir ao estado 22
    type_aux               ir ao estado 23


Estado 29

   35 var_decl_id: TOK_IDENTIFIER . brackets_opt

    TOK_LRSQUARE  deslocar, e ir ao estado 31

    $padrão  reduzir usando a regra 22 (brackets_opt)

    brackets_opt  ir ao estado 39


Estado 30

   13 field_decl: type var_decl_id . field_decl_aux1

    TOK_EQUALS  deslocar, e ir ao estado 40
    TOK_COMMA   deslocar, e ir ao estado 41

    $padrão  reduzir usando a regra 16 (field_decl_aux2)

    field_decl_aux1  ir ao estado 42
    field_decl_aux2  ir ao estado 43


Estado 31

   23 brackets_opt: TOK_LRSQUARE . brackets_opt

    TOK_LRSQUARE  deslocar, e ir ao estado 31

    $padrão  reduzir usando a regra 22 (brackets_opt)

    brackets_opt  ir ao estado 44


Estado 32

   18 type: type_aux brackets_opt .

    $padrão  reduzir usando a regra 18 (type)


Estado 33

   25 method_return_type: TOK_VOID .

    $padrão  reduzir usando a regra 25 (method_return_type)


Estado 34

   26 method_return_type: type .

    $padrão  reduzir usando a regra 26 (method_return_type)


Estado 35

   24 method_decl: TOK_METHOD method_return_type . TOK_IDENTIFIER TOK_LPAREN formal_params_list_opt TOK_RPAREN block

    TOK_IDENTIFIER  deslocar, e ir ao estado 45


Estado 36

    5 class_body: TOK_LCURLY decls_opt method_decl_list TOK_RCURLY .

    $padrão  reduzir usando a regra 5 (class_body)


Estado 37

   10 method_decl_list: method_decl method_decl_list .

    $padrão  reduzir usando a regra 10 (method_decl_list)


Estado 38

   12 field_decl_list_decls: field_decl TOK_SEMICOLON field_decl_list_decls .

    $padrão  reduzir usando a regra 12 (field_decl_list_decls)


Estado 39

   35 var_decl_id: TOK_IDENTIFIER brackets_opt .

    $padrão  reduzir usando a regra 35 (var_decl_id)


Estado 40

   15 field_decl_aux1: TOK_EQUALS . var_init field_decl_aux2

    TOK_IDENTIFIER       deslocar, e ir ao estado 46
    TOK_LCURLY           deslocar, e ir ao estado 47
    TOK_LPAREN           deslocar, e ir ao estado 48
    TOK_ARROBA           deslocar, e ir ao estado 49
    TOK_PLUS             deslocar, e ir ao estado 50
    TOK_MINUS            deslocar, e ir ao estado 51
    TOK_NOT              deslocar, e ir ao estado 52
    TOK_INTEGERCONSTANT  deslocar, e ir ao estado 53
    TOK_STRINGCONSTANT   deslocar, e ir ao estado 54

    var_init             ir ao estado 55
    array_init           ir ao estado 56
    array_creation_expr  ir ao estado 57
    expr                 ir ao estado 58
    al_expr              ir ao estado 59
    var                  ir ao estado 60


Estado 41

   17 field_decl_aux2: TOK_COMMA . var_decl_id field_decl_aux1

    TOK_IDENTIFIER  deslocar, e ir ao estado 29

    var_decl_id  ir ao estado 61


Estado 42

   13 field_decl: type var_decl_id field_decl_aux1 .

    $padrão  reduzir usando a regra 13 (field_decl)


Estado 43

   14 field_decl_aux1: field_decl_aux2 .

    $padrão  reduzir usando a regra 14 (field_decl_aux1)


Estado 44

   23 brackets_opt: TOK_LRSQUARE brackets_opt .

    $padrão  reduzir usando a regra 23 (brackets_opt)


Estado 45

   24 method_decl: TOK_METHOD method_return_type TOK_IDENTIFIER . TOK_LPAREN formal_params_list_opt TOK_RPAREN block

    TOK_LPAREN  deslocar, e ir ao estado 62


Estado 46

  109 var: TOK_IDENTIFIER . var_aux

    TOK_LSQUARE  deslocar, e ir ao estado 63
    TOK_DOT      deslocar, e ir ao estado 64

    $padrão  reduzir usando a regra 110 (var_aux)

    var_aux  ir ao estado 65


Estado 47

   39 array_init: TOK_LCURLY . var_init var_init_list_comma TOK_RCURLY

    TOK_IDENTIFIER       deslocar, e ir ao estado 46
    TOK_LCURLY           deslocar, e ir ao estado 47
    TOK_LPAREN           deslocar, e ir ao estado 48
    TOK_ARROBA           deslocar, e ir ao estado 49
    TOK_PLUS             deslocar, e ir ao estado 50
    TOK_MINUS            deslocar, e ir ao estado 51
    TOK_NOT              deslocar, e ir ao estado 52
    TOK_INTEGERCONSTANT  deslocar, e ir ao estado 53
    TOK_STRINGCONSTANT   deslocar, e ir ao estado 54

    var_init             ir ao estado 66
    array_init           ir ao estado 56
    array_creation_expr  ir ao estado 57
    expr                 ir ao estado 58
    al_expr              ir ao estado 59
    var                  ir ao estado 60


Estado 48

  103 al_expr: TOK_LPAREN . expr TOK_RPAREN

    TOK_IDENTIFIER       deslocar, e ir ao estado 46
    TOK_LPAREN           deslocar, e ir ao estado 48
    TOK_PLUS             deslocar, e ir ao estado 50
    TOK_MINUS            deslocar, e ir ao estado 51
    TOK_NOT              deslocar, e ir ao estado 52
    TOK_INTEGERCONSTANT  deslocar, e ir ao estado 53
    TOK_STRINGCONSTANT   deslocar, e ir ao estado 54

    expr     ir ao estado 67
    al_expr  ir ao estado 59
    var      ir ao estado 60


Estado 49

   42 array_creation_expr: TOK_ARROBA . type array_dim_decl array_dim_decl_list

    TOK_IDENTIFIER  deslocar, e ir ao estado 17
    TOK_INT         deslocar, e ir ao estado 18
    TOK_STRING      deslocar, e ir ao estado 19

    type      ir ao estado 68
    type_aux  ir ao estado 23


Estado 50

   93 al_expr: TOK_PLUS . al_expr

    TOK_IDENTIFIER       deslocar, e ir ao estado 46
    TOK_LPAREN           deslocar, e ir ao estado 48
    TOK_PLUS             deslocar, e ir ao estado 50
    TOK_MINUS            deslocar, e ir ao estado 51
    TOK_NOT              deslocar, e ir ao estado 52
    TOK_INTEGERCONSTANT  deslocar, e ir ao estado 53
    TOK_STRINGCONSTANT   deslocar, e ir ao estado 54

    al_expr  ir ao estado 69
    var      ir ao estado 60


Estado 51

   94 al_expr: TOK_MINUS . al_expr

    TOK_IDENTIFIER       deslocar, e ir ao estado 46
    TOK_LPAREN           deslocar, e ir ao estado 48
    TOK_PLUS             deslocar, e ir ao estado 50
    TOK_MINUS            deslocar, e ir ao estado 51
    TOK_NOT              deslocar, e ir ao estado 52
    TOK_INTEGERCONSTANT  deslocar, e ir ao estado 53
    TOK_STRINGCONSTANT   deslocar, e ir ao estado 54

    al_expr  ir ao estado 70
    var      ir ao estado 60


Estado 52

   95 al_expr: TOK_NOT . al_expr

    TOK_IDENTIFIER       deslocar, e ir ao estado 46
    TOK_LPAREN           deslocar, e ir ao estado 48
    TOK_PLUS             deslocar, e ir ao estado 50
    TOK_MINUS            deslocar, e ir ao estado 51
    TOK_NOT              deslocar, e ir ao estado 52
    TOK_INTEGERCONSTANT  deslocar, e ir ao estado 53
    TOK_STRINGCONSTANT   deslocar, e ir ao estado 54

    al_expr  ir ao estado 71
    var      ir ao estado 60


Estado 53

  104 al_expr: TOK_INTEGERCONSTANT .

    $padrão  reduzir usando a regra 104 (al_expr)


Estado 54

  105 al_expr: TOK_STRINGCONSTANT .

    $padrão  reduzir usando a regra 105 (al_expr)


Estado 55

   15 field_decl_aux1: TOK_EQUALS var_init . field_decl_aux2

    TOK_COMMA  deslocar, e ir ao estado 41

    $padrão  reduzir usando a regra 16 (field_decl_aux2)

    field_decl_aux2  ir ao estado 72


Estado 56

   37 var_init: array_init .

    $padrão  reduzir usando a regra 37 (var_init)


Estado 57

   38 var_init: array_creation_expr .

    $padrão  reduzir usando a regra 38 (var_init)


Estado 58

   36 var_init: expr .

    $padrão  reduzir usando a regra 36 (var_init)


Estado 59

   86 expr: al_expr . TOK_EQEQ al_expr
   87     | al_expr . TOK_LESS al_expr
   88     | al_expr . TOK_LESSEQ al_expr
   89     | al_expr . TOK_GREATEREQ al_expr
   90     | al_expr . TOK_GREATER al_expr
   91     | al_expr . TOK_DIFF al_expr
   92     | al_expr .
   96 al_expr: al_expr . TOK_PLUS al_expr
   97        | al_expr . TOK_MINUS al_expr
   98        | al_expr . TOK_2PIPE al_expr
   99        | al_expr . TOK_ASTERISK al_expr
  100        | al_expr . TOK_SLASH al_expr
  101        | al_expr . TOK_AND al_expr
  102        | al_expr . TOK_MOD al_expr

    TOK_LESS       deslocar, e ir ao estado 73
    TOK_LESSEQ     deslocar, e ir ao estado 74
    TOK_EQEQ       deslocar, e ir ao estado 75
    TOK_DIFF       deslocar, e ir ao estado 76
    TOK_GREATEREQ  deslocar, e ir ao estado 77
    TOK_GREATER    deslocar, e ir ao estado 78
    TOK_PLUS       deslocar, e ir ao estado 79
    TOK_MINUS      deslocar, e ir ao estado 80
    TOK_2PIPE      deslocar, e ir ao estado 81
    TOK_ASTERISK   deslocar, e ir ao estado 82
    TOK_SLASH      deslocar, e ir ao estado 83
    TOK_AND        deslocar, e ir ao estado 84
    TOK_MOD        deslocar, e ir ao estado 85

    $padrão  reduzir usando a regra 92 (expr)


Estado 60

  106 al_expr: var . method_call_opt

    TOK_LPAREN  deslocar, e ir ao estado 86

    $padrão  reduzir usando a regra 107 (method_call_opt)

    method_call_stmt  ir ao estado 87
    method_call_opt   ir ao estado 88


Estado 61

   17 field_decl_aux2: TOK_COMMA var_decl_id . field_decl_aux1

    TOK_EQUALS  deslocar, e ir ao estado 40
    TOK_COMMA   deslocar, e ir ao estado 41

    $padrão  reduzir usando a regra 16 (field_decl_aux2)

    field_decl_aux1  ir ao estado 89
    field_decl_aux2  ir ao estado 43


Estado 62

   24 method_decl: TOK_METHOD method_return_type TOK_IDENTIFIER TOK_LPAREN . formal_params_list_opt TOK_RPAREN block

    TOK_IDENTIFIER  deslocar, e ir ao estado 17
    TOK_INT         deslocar, e ir ao estado 18
    TOK_STRING      deslocar, e ir ao estado 19
    TOK_VAL         deslocar, e ir ao estado 90

    $padrão  reduzir usando a regra 33 (formal_params_list_opt)

    type                    ir ao estado 91
    type_aux                ir ao estado 23
    formal_params_list      ir ao estado 92
    formal_params_list_opt  ir ao estado 93


Estado 63

  112 var_aux: TOK_LSQUARE . expr expr_list_comma TOK_RSQUARE var_aux

    TOK_IDENTIFIER       deslocar, e ir ao estado 46
    TOK_LPAREN           deslocar, e ir ao estado 48
    TOK_PLUS             deslocar, e ir ao estado 50
    TOK_MINUS            deslocar, e ir ao estado 51
    TOK_NOT              deslocar, e ir ao estado 52
    TOK_INTEGERCONSTANT  deslocar, e ir ao estado 53
    TOK_STRINGCONSTANT   deslocar, e ir ao estado 54

    expr     ir ao estado 94
    al_expr  ir ao estado 59
    var      ir ao estado 60


Estado 64

  111 var_aux: TOK_DOT . TOK_IDENTIFIER var_aux

    TOK_IDENTIFIER  deslocar, e ir ao estado 95


Estado 65

  109 var: TOK_IDENTIFIER var_aux .

    $padrão  reduzir usando a regra 109 (var)


Estado 66

   39 array_init: TOK_LCURLY var_init . var_init_list_comma TOK_RCURLY

    TOK_COMMA  deslocar, e ir ao estado 96

    $padrão  reduzir usando a regra 40 (var_init_list_comma)

    var_init_list_comma  ir ao estado 97


Estado 67

  103 al_expr: TOK_LPAREN expr . TOK_RPAREN

    TOK_RPAREN  deslocar, e ir ao estado 98


Estado 68

   42 array_creation_expr: TOK_ARROBA type . array_dim_decl array_dim_decl_list

    TOK_LSQUARE  deslocar, e ir ao estado 99

    array_dim_decl  ir ao estado 100


Estado 69

   93 al_expr: TOK_PLUS al_expr .
   96        | al_expr . TOK_PLUS al_expr
   97        | al_expr . TOK_MINUS al_expr
   98        | al_expr . TOK_2PIPE al_expr
   99        | al_expr . TOK_ASTERISK al_expr
  100        | al_expr . TOK_SLASH al_expr
  101        | al_expr . TOK_AND al_expr
  102        | al_expr . TOK_MOD al_expr

    $padrão  reduzir usando a regra 93 (al_expr)


Estado 70

   94 al_expr: TOK_MINUS al_expr .
   96        | al_expr . TOK_PLUS al_expr
   97        | al_expr . TOK_MINUS al_expr
   98        | al_expr . TOK_2PIPE al_expr
   99        | al_expr . TOK_ASTERISK al_expr
  100        | al_expr . TOK_SLASH al_expr
  101        | al_expr . TOK_AND al_expr
  102        | al_expr . TOK_MOD al_expr

    $padrão  reduzir usando a regra 94 (al_expr)


Estado 71

   95 al_expr: TOK_NOT al_expr .
   96        | al_expr . TOK_PLUS al_expr
   97        | al_expr . TOK_MINUS al_expr
   98        | al_expr . TOK_2PIPE al_expr
   99        | al_expr . TOK_ASTERISK al_expr
  100        | al_expr . TOK_SLASH al_expr
  101        | al_expr . TOK_AND al_expr
  102        | al_expr . TOK_MOD al_expr

    $padrão  reduzir usando a regra 95 (al_expr)


Estado 72

   15 field_decl_aux1: TOK_EQUALS var_init field_decl_aux2 .

    $padrão  reduzir usando a regra 15 (field_decl_aux1)


Estado 73

   87 expr: al_expr TOK_LESS . al_expr

    TOK_IDENTIFIER       deslocar, e ir ao estado 46
    TOK_LPAREN           deslocar, e ir ao estado 48
    TOK_PLUS             deslocar, e ir ao estado 50
    TOK_MINUS            deslocar, e ir ao estado 51
    TOK_NOT              deslocar, e ir ao estado 52
    TOK_INTEGERCONSTANT  deslocar, e ir ao estado 53
    TOK_STRINGCONSTANT   deslocar, e ir ao estado 54

    al_expr  ir ao estado 101
    var      ir ao estado 60


Estado 74

   88 expr: al_expr TOK_LESSEQ . al_expr

    TOK_IDENTIFIER       deslocar, e ir ao estado 46
    TOK_LPAREN           deslocar, e ir ao estado 48
    TOK_PLUS             deslocar, e ir ao estado 50
    TOK_MINUS            deslocar, e ir ao estado 51
    TOK_NOT              deslocar, e ir ao estado 52
    TOK_INTEGERCONSTANT  deslocar, e ir ao estado 53
    TOK_STRINGCONSTANT   deslocar, e ir ao estado 54

    al_expr  ir ao estado 102
    var      ir ao estado 60


Estado 75

   86 expr: al_expr TOK_EQEQ . al_expr

    TOK_IDENTIFIER       deslocar, e ir ao estado 46
    TOK_LPAREN           deslocar, e ir ao estado 48
    TOK_PLUS             deslocar, e ir ao estado 50
    TOK_MINUS            deslocar, e ir ao estado 51
    TOK_NOT              deslocar, e ir ao estado 52
    TOK_INTEGERCONSTANT  deslocar, e ir ao estado 53
    TOK_STRINGCONSTANT   deslocar, e ir ao estado 54

    al_expr  ir ao estado 103
    var      ir ao estado 60


Estado 76

   91 expr: al_expr TOK_DIFF . al_expr
